# RastaConverter

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  rasta.cpp
